load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "compose_test",
    size = "enormous",
    srcs = ["compose_test.go"],
    data = [
        "//c-deps:libgeos",
        "//pkg/compose:compare/docker-compose.yml",
    ],
    tags = [
        "integration",
        "no-remote-exec",
    ],
    deps = [
        "//pkg/build/bazel",
        "//pkg/testutils/skip",
        "//pkg/util/envutil",
    ],
)
