load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "keys.go",
        "provider.go",
        "system.go",
        "system_mask.go",
        "testutil.go",
    ],
    embed = [":config_go_proto"],
    importpath = "github.com/cockroachdb/cockroach/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/systemschema",
        "//pkg/sql/catalog/tabledesc",
        "//pkg/util/log",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
    ],
)

go_test(
    name = "config_test",
    size = "small",
    srcs = [
        "keys_test.go",
        "main_test.go",
        "system_test.go",
    ],
    deps = [
        ":config",
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog/bootstrap",
        "//pkg/sql/catalog/catalogkeys",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/tabledesc",
        "//pkg/testutils",
        "//pkg/util/encoding",
        "//pkg/util/leaktest",
        "@com_github_stretchr_testify//require",
    ],
)

proto_library(
    name = "config_proto",
    srcs = ["system.proto"],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachpb:roachpb_proto",
        "@com_github_gogo_protobuf//gogoproto:gogo_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    compilers = ["//pkg/cmd/protoc-gen-gogoroach:protoc-gen-gogoroach_compiler"],
    importpath = "github.com/cockroachdb/cockroach/pkg/config",
    proto = ":config_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachpb",
        "@com_github_gogo_protobuf//gogoproto",
    ],
)
