load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "docker",
    srcs = ["docker_utils.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/docker",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_docker_docker//api/types",
        "@com_github_docker_docker//api/types/container",
        "@com_github_docker_docker//client",
        "@com_github_docker_docker//pkg/stdcopy",
        "@com_github_docker_go_connections//nat",
        "@org_golang_x_net//context",
    ],
)

go_test(
    name = "docker_test",
    size = "enormous",
    srcs = ["docker_test.go"],
    embed = [":docker"],
    data = glob([
            "docker-entrypoint-initdb.d/**",
    ]),
    deps = [
        "//pkg/util/contextutil",
        "//pkg/util/log",
        "@com_github_docker_docker//client",
        "@org_golang_x_net//context",
    ],
)
