load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = ["docs.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/docs",
    visibility = ["//visibility:public"],
    deps = ["//pkg/build"],
)

get_x_data(name = "get_x_data")
