load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "geo",
    srcs = [
        "bbox.go",
        "encode.go",
        "errors.go",
        "geo.go",
        "hilbert.go",
        "iterator.go",
        "latlng.go",
        "parse.go",
        "polyline.go",
        "summary.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/geo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/geo/geographiclib",
        "//pkg/geo/geopb",
        "//pkg/geo/geoprojbase",
        "//pkg/geo/geos",
        "//pkg/util",
        "//pkg/util/errorutil/unimplemented",
        "//pkg/util/protoutil",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/golang/geo/r1",
        "//vendor/github.com/golang/geo/s1",
        "//vendor/github.com/golang/geo/s2",
        "//vendor/github.com/pierrre/geohash",
        "//vendor/github.com/twpayne/go-geom",
        "//vendor/github.com/twpayne/go-geom/encoding/ewkb",
        "//vendor/github.com/twpayne/go-geom/encoding/ewkbhex",
        "//vendor/github.com/twpayne/go-geom/encoding/geojson",
        "//vendor/github.com/twpayne/go-geom/encoding/kml",
        "//vendor/github.com/twpayne/go-geom/encoding/wkb",
        "//vendor/github.com/twpayne/go-geom/encoding/wkbcommon",
        "//vendor/github.com/twpayne/go-geom/encoding/wkbhex",
        "//vendor/github.com/twpayne/go-geom/encoding/wkt",
    ],
)

go_test(
    name = "geo_test",
    srcs = [
        "bbox_test.go",
        "encode_test.go",
        "geo_test.go",
        "iterator_test.go",
        "latlng_test.go",
        "parse_test.go",
    ],
    embed = [":geo"],
    deps = [
        "//pkg/geo/geopb",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/golang/geo/s2",
        "//vendor/github.com/pierrre/geohash",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/twpayne/go-geom",
    ],
)
