load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gossip",
    srcs = [
        "client.go",
        "doc.go",
        "gossip.go",
        "gossip.pb.go",
        "info.go",
        "infostore.go",
        "keys.go",
        "node_set.go",
        "server.go",
        "status.go",
        "util.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/gossip",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/gossip/resolver",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/rpc/nodedialer",
        "//pkg/util",
        "//pkg/util/errorutil",
        "//pkg/util/grpcutil",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/metric",
        "//pkg/util/protoutil",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/util/uuid",
        "@com_github_cockroachdb_circuitbreaker//:circuitbreaker",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_logtags//:logtags",
        "@com_github_cockroachdb_redact//:redact",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//sortkeys",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_test(
    name = "gossip_test",
    srcs = [
        "client_test.go",
        "convergence_test.go",
        "gossip_test.go",
        "info_test.go",
        "infostore_test.go",
        "keys_test.go",
        "main_test.go",
        "node_set_test.go",
        "status_test.go",
        "storage_test.go",
        "util_test.go",
    ],
    embed = [":gossip"],
    deps = [
        "//pkg/base",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/gossip",
        "//pkg/gossip/resolver",
        "//pkg/gossip/simulation",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/testutils",
        "//pkg/testutils/skip",
        "//pkg/util",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/metric",
        "//pkg/util/netutil",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/retry",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/util/tracing",
        "//pkg/util/uuid",
        "@com_github_cockroachdb_errors//:errors",
        "@org_golang_google_grpc//:grpc",
    ],
)
