load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inspectz",
    srcs = [
        "inspectz.go",
        "unsupported.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/inspectz",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/inspectz/inspectzpb",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/kvflowcontrol",
        "//pkg/kv/kvserver/kvflowcontrol/kvflowinspectpb",
        "//pkg/kv/kvserver/storeliveness/storelivenesspb",
        "//pkg/roachpb",
        "//pkg/util/errorutil",
        "//pkg/util/log",
    ],
)
